--- a/src/index.html
+++ b/src/index.html
@@ -2,64 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate index</title>
+    <title>main</title>
     <analytics></analytics>
+
+
   </head>
-
   <body class="index">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="images/image.png" />
-      <img src="images/image.jpg" />
-      <img src="images/image.svg" />
-    </div>
+  <p><a href="index.html">Главная</a></p>
+<p><a href="about.html">О нас</a></p>
+<p><a href="map.html">Карта</a></p>
+<p><a href="literature.html">Литература</a></p>
+<p><a href="formspree.html">Сборщик почт(типа мы сделали, удалим потом)</a></p>
 
-    <div>This is a landing page</div>
+<h1>Разделы статей</h1>
+<p><a href="color.html">Знаки изменения цвета</a></p>
+<p><a href="feno.html">Фенологические знаки</a></p>
+<p><a href="geo.html">Геологические знаки</a></p>
+<p><a href="habitat.html">Знаки поведения</a></p>
+<p><a href="sound.html">Звуковые знаки</a></p>
+<p><a href="structure.html">Знаки изменения строения</a></p>
 
-    <!-- modify this form HTML and place wherever you want your form -->
-<form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
-  <label>Email:</label>
-  <input type="email" name="email" />
-  <label>Message:</label>
-  <input type="text" name="message" />
-  <button id="my-form-button">Submit</button>
-  <p id="my-form-status"></p>
-</form>
-
-<!-- Place this script at the end of the body tag -->
-<script>
-  var form = document.getElementById("my-form");
-  
-  async function handleSubmit(event) {
-    event.preventDefault();
-    var status = document.getElementById("my-form-status");
-    var data = new FormData(event.target);
-    fetch(event.target.action, {
-      method: form.method,
-      body: data,
-      headers: {
-          'Accept': 'application/json'
-      }
-    }).then(response => {
-      if (response.ok) {
-        status.innerHTML = "Thanks for your submission!";
-        form.reset()
-      } else {
-        response.json().then(data => {
-          if (Object.hasOwn(data, 'errors')) {
-            status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
-          } else {
-            status.innerHTML = "Oops! There was a problem submitting your form"
-          }
-        })
-      }
-    }).catch(error => {
-      status.innerHTML = "Oops! There was a problem submitting your form"
-    });
-  }
-  form.addEventListener("submit", handleSubmit)
-</script>
   </body>
 </html>
