--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate index</title>
+    <title>main</title>
     <analytics></analytics>
   </head>
-
   <body class="index">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="images/image.png" />
-      <img src="images/image.jpg" />
-      <img src="images/image.svg" />
-    </div>
+  <p><a href="index.html">Главная</a></p>
+<p><a href="about.html">О нас</a></p>
+<p><a href="map.html">Карта</a></p>
+<p><a href="literature.html">Литература</a></p>
+<p><a href="formspree.html">Сборщик почт(типа мы сделали, удалим потом)</a></p>
 
-    <div>This is a landing page</div>
+<h1>Разделы статей</h1>
+<p><a href="color.html">Знаки изменения цвета</a></p>
+<p><a href="feno.html">Фенологические знаки</a></p>
+<p><a href="geo.html">Геологические знаки</a></p>
+<p><a href="habitat.html">Знаки поведения</a></p>
+<p><a href="sound.html">Звуковые знаки</a></p>
+<p><a href="structure.html">Знаки изменения строения</a></p>
+
   </body>
 </html>
