--- a/src/formspree.html
+++ b/src/formspree.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="images">
+    <!-- <div class="images">
         <div class="image" id="bgPNG"></div>
         <div class="image" id="bgJPG"></div>
         <div class="image" id="bgSVG"></div>
@@ -16,7 +16,7 @@
       </div>
   
       <div>This is a landing page</div>
-  
+   -->
 
   <form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
     <label>Email:</label>
