--- a/src/habitat/habitat_article1.html
+++ b/src/habitat/habitat_article1.html
@@ -28,7 +28,7 @@
     <a>Согласно недавнему опросу Метеорологического управления Великобритании, <br>
         более 60% британцев считают, 
         что лежание коров — верный признак дождя.</a>
-        <img class="cow2" src="../images/habitat/habitat_article1/cow2.jpeg">
+        <img class="cow2" src="../images/habitat/habitat_article1/cow2.jpg">
     <a>Возможно, наиболее распространенная теория заключается в том, <br>
         что коровы способны чувствовать приближение дождя либо по повышенной<br>
         влажности воздуха, либо по сопутствующему падению атмосферного давления, <br>
@@ -39,7 +39,7 @@
         что похолодание в воздухе, которое часто бывает перед дождем, может побудить коров <br>
         лечь, чтобы сохранить тепло.
     </a>
-    <img class="cow3" src="../images/habitat/habitat_article1/cow3.jpeg">
+    <img class="cow3" src="../images/habitat/habitat_article1/cow3.jpg">
     <a>Однако, по правде говоря, нет никаких научных подтверждений этой части погодного фольклора.<br>
          Наиболее вероятным объяснением любой корреляции между поведением коров и погодой, вероятно,<br>
          является простое совпадение – коровы проводят до половины своего времени лежа, либо для отдыха,<br>
