--- a/src/formspree.html
+++ b/src/formspree.html
@@ -19,7 +19,7 @@
    -->
   
 
-  <form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
+  <!-- <form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
     <label>Email:</label>
     <input type="email" name="email" />
     <label>Message:</label>
@@ -60,5 +60,5 @@
     }
     form.addEventListener("submit", handleSubmit)
   </script> 
-</body>
+</body> -->
 </html>
