--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,15 @@
 <p><a href="literature.html">Литература</a></p> -->
 <!-- <p><a href="formspree.html">Сборщик почт(типа мы сделали, удалим потом)</a></p> -->
 
-<h1 class="hello">Привет, это <a href="about.html">Умвельт</a>
+<h1 class="hello">Привет, это <a href="about.html">Умвельт</a></h1>
 <p class="intro">Сейчас мы расшифровываем природные сигналы,<br> 
   чтобы вы научились понимать окружающий мир.<br> 
   Скоро увидимся!</p>
 <div class="animation_rostok">
-  <img class="rostok" src="./images/zaglushka/rostok.png">
+  <img class="rostok" src="images/zaglushka/rostok.png">
 </div>
 <div class="underline2" > 
-  <img class="underline22" src="./images/zaglushka/underline2.png" >
+  <img class="underline22" src="images/zaglushka/underline2.png" >
 </div>
 <div class="socials">
   <img class="tg" src="./images/zaglushka/tg.png" href="https://t.me/uumwelt">
