article and zaglushka

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
   <img class="underline22" src="images/zaglushka/underline2.png" >
 </div>
 <div class="socials">
-  <img class="tg" src="./images/zaglushka/tg.png" href="https://t.me/uumwelt">
-  <img class="vk" src="./images/zaglushka/vk.png" href="https://t.me/uumwelt">
-  <img class="dzen" src="./images/zaglushka/dzen.png" href="https://t.me/uumwelt">
+  <img class="tg" src="images/zaglushka/tg.png" href="https://t.me/uumwelt">
+  <img class="vk" src="images/zaglushka/vk.png" href="https://t.me/uumwelt">
+  <img class="dzen" src="images/zaglushka/dzen.png" href="https://t.me/uumwelt">
 </div>
 <form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
   <p>Вы можете оставить почту,<br>
