about us completed

--- a/src/about.html
+++ b/src/about.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="section2">
-        <div><img class="logotypee" src="../src/images/about/logo.jpg" alt=""></div>
+        <div><img class="logotypee" src="images/about/logo.jpg"></div>
         <div>
             <p>Окружающий мир общается с&nbsp;человеком на&nbsp;языке, состоящим из&nbsp;знаков. Знаки требуют расшифровки.
                 <br><br>
@@ -26,7 +26,7 @@
     </div>
 
     <div class="img1">
-        <img src="./images/about/img1.jpg">
+        <img src="images/about/img1.jpg">
     </div>
 
     <hr>
@@ -76,7 +76,7 @@
        
     <div class="container">
         <div class="item1">
-            <div class="item_pic"><img src="../src/images/about/img2.jpg" alt=""></div>
+            <div class="item_pic"><img src="images/about/img2.jpg" alt=""></div>
             <h2>1</h2>
         </div>
         <div class="item2">
@@ -99,18 +99,18 @@
                 становится частью большого диалога.</p> <br>
                 <div class="primer">
                     <a href="../src/habitat/habitat_article1.html"><h2>Например, вот одна из статей</h2></a>
-                    <div class="underline"> <img src="../src/images/about/underline.png" alt=""></div>
+                    <div class="underline"> <img src="images/about/underline.png" alt=""></div>
                 </div>
         </div>
         <div class="item1">
             <h2>2</h2>
-            <div class="item_pic2"><img src="../src/images/about/img3.jpg" alt=""></div>
+            <div class="item_pic2"><img src="images/about/img3.jpg" alt=""></div>
         </div>
     </div>
 
     <div class="container">
         <div class="item1">
-            <div class="item_pic2"><img src="../src/images/about/img4.jpg" alt=""></div>
+            <div class="item_pic2"><img src="images/about/img4.jpg" alt=""></div>
             <h2>3</h2>
         </div>
         <div class="item2">
@@ -129,7 +129,7 @@
     </div>
 
     <div class="manifesto_bg">
-        <img src="../src/images/about/img6.png" alt="">
+        <img src="images/about/img6.png" alt="">
     </div>
     <div class="manifesto">
         <p class="manifesto1">
@@ -170,7 +170,7 @@
 
     <div class="container1">
         <div class="item1">
-            <div class="history_pic"><img src="../src/images/about/img5.JPG" alt=""></div>
+            <div class="history_pic"><img src="images/about/img5.JPG" alt=""></div>
         </div>
         <div class="item2">
             <p>Человек и природный знак</p>
@@ -196,9 +196,9 @@
     
 
     <div class="social">
-        <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="../src/images/about/tg.png" alt=""></a>
-        <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="../src/images/about/vk.png" alt=""></a>
-        <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="../src/images/about/dzen.png" alt=""></a>
+        <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="images/about/tg.png" alt=""></a>
+        <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="images/about/vk.png" alt=""></a>
+        <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="images/about/dzen.png" alt=""></a>
     </div>
 </body>
 </html>
