--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about</title>
+    <title>Про медиа о природных знаках Умвельт</title>
+    <meta name="description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. 
+    Мы сервис Умвельт, где собираются и интерпретируются природные сигналы.">
+    <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
+    <link rel="icon" href="images/about/favicon.svg" type="image/x-icon">
 </head>
 <body>
     <!-- <p><a href="./index.html">Главная</a></p>
@@ -31,40 +35,6 @@
 
     <hr>
 
-    <!-- <div class="section">
-        <h2>Типы знаков</h2>
-    </div>
-
-    <div class="section">
-        <p>Все природные знаки мы делим на 6 категорий, <br> каждая из них — раздел со статьями.</p>
-    </div>
-
-    <div class="big_container">
-        <div class="graph">
-            <div class="pair1">
-                <div class="razdel" id="phenology"><h2>Фенология</h2></div>
-                <div class="razdel" id="geology"><h2>Геология</h2></div>
-            </div>
-
-            <div class="pair2">
-                <div class="razdel" id="sound"><h2>Звук</h2></div>
-                <div class="razdel" id="color"><h2>Цвет</h2></div>
-            </div>
-
-            <div class="pair3">
-                <div class="razdel" id="behavior"><h2>Поведение</h2></div>
-                <div class="razdel" id="structure"><h2>Строение</h2></div>
-            </div>
-        </div>
-    
-        <div class="description">
-            <h2>Геология</h2> <br>
-            <p>Этот раздел посвящён знакам, которые оставляет Земля через свою структуру и процессы. Мы исследуем, как тектонические сдвиги, извержения вулканов, метеориты и осадочные породы создают коды, которые можно расшифровать для понимания истории планеты. В каждом камне и каждом слое земной коры зашифрованы миллионы лет информации о прошлом нашей планеты.
-            </p>
-        </div>
-    </div>
-
-    <hr> -->
 
     <div class="section">
         <h2>Когда мы можем помочь?</h2>
