--- a/src/habitat/habitat_article1.html
+++ b/src/habitat/habitat_article1.html
@@ -49,7 +49,7 @@
     </div>
     <p class="tags">Поведение Животные Осадки</p>
     <div class="socials">
-        <img class="tg" src="../images/zaglushka/tg.png" href="https://t.me/uumwelt">
+        <a href="https://t.me/uumwelt" ><img class="tg" src="../images/zaglushka/tg.png" href="https://t.me/uumwelt"></a>
         <img class="vk" src="../images/zaglushka/vk.png" href="https://t.me/uumwelt">
         <img class="dzen" src="../images/zaglushka/dzen.png" href="https://t.me/uumwelt">
       </div>
