--- a/src/about.html
+++ b/src/about.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="img1">
-        <img src="./images/about/img1.jpg">
+        <img src="images/about/img1.jpg">
     </div>
 
     <hr>
@@ -72,7 +72,7 @@
        
     <div class="container">
         <div class="item1">
-            <div class="item_pic"><img src="../src/images/about/img2.jpg" alt=""></div>
+            <div class="item_pic"><img src="images/about/img2.jpg" alt=""></div>
             <h2>1</h2>
         </div>
         <div class="item2">
@@ -94,13 +94,13 @@
                 за природными изменениями. Каждое взаимодействие с природой <br>
                 становится частью большого диалога.</p> <br>
                 <div class="primer">
-                    <a href="./habitat/habitat_article1.html"><h2>Например, вот одна из статей</h2></a>
-                    <div class="underline"> <img src="../src/images/about/underline.png" alt=""></div>
+                    <a href="habitat/habitat_article1.html"><h2>Например, вот одна из статей</h2></a>
+                    <div class="underline"> <img src="images/about/underline.png" alt=""></div>
                 </div>
         </div>
         <div class="item1">
             <h2>2</h2>
-            <div class="item_pic2"><img src="../src/images/about/img3.jpg" alt=""></div>
+            <div class="item_pic2"><img src="images/about/img3.jpg" alt=""></div>
         </div>
     </div>
 
@@ -125,7 +125,7 @@
     </div>
 
     <div class="manifesto_bg">
-        <img src="../src/images/about/img5.png" alt="">
+        <img src="images/about/img5.png" alt="">
     </div>
     <div class="manifesto">
         <p>
