--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
 <!-- <p><a href="map.html">Карта</a></p>
 <p><a href="literature.html">Литература</a></p> -->
 <!-- <p><a href="formspree.html">Сборщик почт(типа мы сделали, удалим потом)</a></p> -->
-
+<!-- <div class="navbar_line_green">
+<img class="navbar_line" src="./images/habitat/habitat_article1/navbar_line.svg">
+</div> -->
 <h1 class="hello">Привет, это <a href="about.html">Умвельт</a>
 <p class="intro">Сейчас мы расшифровываем природные сигналы,<br> 
   чтобы вы научились понимать окружающий мир.<br> 
@@ -28,7 +30,7 @@
   <img class="dzen" src="./images/zaglushka/dzen.png" href="https://t.me/uumwelt">
 </div>
 <form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
-  <p>Вы можете оставить почту,<br>
+  <p id="form_text">Вы можете оставить почту,<br>
     чтобы первыми узнать о запуске сайта</p>
 
   <input type="email" name="email" placeholder="Почта" />
