--- a/src/about.html
+++ b/src/about.html
@@ -68,7 +68,7 @@
                 за природными изменениями. Каждое взаимодействие с природой <br>
                 становится частью большого диалога.</p> <br>
                 <div class="primer">
-                    <a href="../src/habitat/habitat_article1.html"><h2>Например, вот одна из статей</h2></a>
+                    <a href="./habitat/habitat_article1.html"><h2>Например, вот одна из статей</h2></a>
                     <div class="underline"> <img src="images/about/underline.png" alt=""></div>
                 </div>
         </div>
