--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,10 @@
 <div class="underline2" > 
   <img class="underline22" src="images/zaglushka/underline2.png" >
 </div>
-<div class="socials">
-  <img class="tg" src="images/zaglushka/tg.png" href="https://t.me/uumwelt">
-  <img class="vk" src="images/zaglushka/vk.png" href="https://t.me/uumwelt">
-  <img class="dzen" src="images/zaglushka/dzen.png" href="https://t.me/uumwelt">
+<div class="social">
+  <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="./images/about/tg.png" alt=""></a>
+  <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="./images/about/vk.png" alt=""></a>
+  <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="./images/about/dzen.png" alt=""></a>
 </div>
 <form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
   <p id="form_text">Вы можете оставить почту,<br>
