--- a/src/habitat/habitat_article1.html
+++ b/src/habitat/habitat_article1.html
@@ -61,10 +61,10 @@
     
     <p class="tags">Поведение Животные Осадки</p>
     </div>
-    <div class="socials">
-        <a href="https://t.me/uumwelt" ><img class="tg" src="../images/zaglushka/tg.png" href="https://t.me/uumwelt"></a>
-        <img class="vk" src="../images/zaglushka/vk.png" href="https://t.me/uumwelt">
-        <img class="dzen" src="../images/zaglushka/dzen.png" href="https://t.me/uumwelt">
+    <div class="social">
+        <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="../images/about/tg.png" alt=""></a>
+        <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="../images/about/vk.png" alt=""></a>
+        <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="../images/about/dzen.png" alt=""></a>
       </div>
       <p class="umwelt_podval">Умвельт</p>
     </body>
