--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>main</title>
+    <title>Медиа о природных знаках Умвельт</title>
+    <meta name="description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. 
+    Мы сервис Умвельт, где собираются и интерпретируются природные сигналы.">
+    <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
+    <link rel="icon" href="images/about/favicon.svg" type="image/x-icon">
     <analytics></analytics>
   </head>
   <body class="zaglushka">
