--- a/src/habitat/habitat_article1.html
+++ b/src/habitat/habitat_article1.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>habitat_article</title>
+    <title>Правда ли, что коровы ложатся, когда собирается дождь?</title>
+    <meta name="description" content="1. Коровы чувствительны к увеличению влажности и ложатся на траву, чтобы она оставалась сухой.">
+    <meta name="keywords" content="Природа, умвельт, природные знаки, медиа о природе, корова, дождь, осадки, поведение животных, ложатся ли коровы, правда ли что коровы ложатся когда собирается дождь">
+    <link rel="icon" href="../images/about/favicon.svg" type="image/x-icon">
 </head>
 <body class="habitat_articles">
     <img class="logotype" src="../images/habitat/habitat_article1/logotype.svg">
@@ -61,7 +64,7 @@
     
     <p class="tags">Поведение Животные Осадки</p>
     </div>
-    <div class="social">
+    <div class="socials">
         <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="../images/about/tg.png" alt=""></a>
         <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="../images/about/vk.png" alt=""></a>
         <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="../images/about/dzen.png" alt=""></a>
