--- a/src/about.html
+++ b/src/about.html
@@ -22,7 +22,7 @@
 
     <div class="section2">
         <div><img class="logotypee" src="images/about/logo.jpg"></div>
-        <div>
+        <div class="section22">
             <p>Окружающий мир общается с&nbsp;человеком на&nbsp;языке, состоящим из&nbsp;знаков. Знаки требуют расшифровки.
                 <br><br>
                 Мы&nbsp;сервис &laquo;Умвельт&raquo;, где собираются и&nbsp;интерпретируются природные сигналы.</p>
@@ -50,23 +50,16 @@
             <h2>1</h2>
         </div>
         <div class="item2">
-            <p>Откройте глаза для вопросов, которые природа ежедневно <br>
-                задаёт нам. Прогуляйтесь по лесу, парку или даже городу — <br>
-                наблюдайте и фиксируйте детали, которые кажутся вам <br>
-                необычными или значимыми. Природа постоянно общается <br>
-                с нами через свои знаки, нужно лишь научиться замечать их.</p>
+            <p>Прогуляйтесь по&nbsp;лесу, парку или даже городу&nbsp;&mdash; наблюдайте и&nbsp;
+                фиксируйте детали, которые кажутся вам необычными или значимыми.
+            </p>
         </div>
     </div>
 
     <div class="container2">
         <div class="item2">
-            <p>Когда вы находите природные знаки и задаётесь вопросом, <br>
-                что они могут означать, наш сервис поможет вам расшифровать <br>
-                их. Введите своё наблюдение в поисковик или исследуйте <br>
-                разделы, где описаны природные явления. Мы создаём статьи,<br> 
-                которые помогут вам понять, какие смыслы скрыты <br>
-                за природными изменениями. Каждое взаимодействие с природой <br>
-                становится частью большого диалога.</p> <br>
+            <p>Введите своё наблюдение в&nbsp;поисковик или исследуйте разделы, 
+                где описаны природные явления. Каждое взаимодействие с&nbsp;природой становится частью большого диалога.</p> <br>
                 <div class="primer">
                     <a href="./habitat/habitat_article1.html"><h2>Например, вот одна из статей</h2></a>
                     <div class="underline"> <img src="images/about/underline.png" alt=""></div>
@@ -84,11 +77,9 @@
             <h2>3</h2>
         </div>
         <div class="item2">
-            <p>Откройте глаза для вопросов, которые природа ежедневно <br>
-                задаёт нам. Прогуляйтесь по лесу, парку или даже городу — <br>
-                наблюдайте и фиксируйте детали, которые кажутся вам <br>
-                 необычными или значимыми. Природа постоянно общается <br>
-                с нами через свои знаки, нужно лишь научиться замечать их.</p>
+            <p>Связывайте отдельные наблюдения в&nbsp;общую картину, находите переклички между разными знаками природы&nbsp;&mdash; 
+                цветами, формами, звуками и&nbsp;циклами. Наш сервис не&nbsp;просто расшифровывает знаки, но&nbsp;помогает создать 
+                систему понимания, в&nbsp;которой каждый элемент природы связан с&nbsp;другим.</p>
         </div>
     </div>
 
@@ -142,7 +133,7 @@
         <div class="item1">
             <div class="history_pic"><img src="images/about/img5.JPG" alt=""></div>
         </div>
-        <div class="item2">
+        <div class="item22">
             <p>Человек и природный знак</p>
             <p class="historyy">С&nbsp;самого появления человечества люди стремились разгадать природу, осознать её&nbsp;тайны и&nbsp;законы. Это стремление привело к&nbsp;формированию различных знаковых систем и&nbsp;мифологий, которые служили основой для понимания окружающего мира.</p>
                 <br>
