--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Медиа о природных знаках Умвельт</title>
     <meta name="description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. 
