--- a/src/color/color_article1.html
+++ b/src/color/color_article1.html
@@ -14,5 +14,11 @@
     <p><a href="../color.html">Назад</a></p>
     <h1>Статья о цвете</h1>
 
+    <form>
+        <input type=""  placeholder="Что Вы хотите узнать?">
+        <button id="my-form-button" src="images/main/poisk.svg" ></button>
+        <p id="my-form-status"></p>
+      </form>
+
     </body>
 </html>
