--- a/src/literature.html
+++ b/src/literature.html
@@ -12,5 +12,11 @@
     <h1>Литература</h1>
     <p><a href="./literature/book.html">Книга</a></p>
 
+    <form>
+        <input type=""  placeholder="Что Вы хотите узнать?">
+        <button id="my-form-button" src="images/main/poisk.svg" ></button>
+        <p id="my-form-status"></p>
+      </form>
+
 </body>
 </html>
