--- a/src/structure.html
+++ b/src/structure.html
@@ -12,5 +12,11 @@
     <p><a href="./literature.html">Литература</a></p>
     <h1>Знаки изменения строения</h1>
     <p><a href="structure/structure_article1.html">Статья о строении</a></p>
+
+    <form>
+        <input type=""  placeholder="Что Вы хотите узнать?">
+        <button id="my-form-button" src="images/main/poisk.svg" ></button>
+        <p id="my-form-status"></p>
+      </form>
 </body>
 </html>
