--- a/src/about.html
+++ b/src/about.html
@@ -7,13 +7,21 @@
     <meta name="description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. 
     Мы сервис Умвельт, где собираются и интерпретируются природные сигналы.">
     <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
-    <link rel="icon" href="images/about/favicon.svg" type="image/x-icon">
+    <link rel="icon" href="images/about/favicon.svg" type="image/x-icon"> 
 </head>
 <body>
-    <!-- <p><a href="./index.html">Главная</a></p>
+    <p><a href="./index.html">Главная</a></p>
     <p><a href="./map.html">Карта</a></p>
     <p><a href="./literature.html">Литература</a></p>
-    <h1>О нас</h1> -->
+    <p><a href="./about.html">О нас</a></p>
+    
+    <form>
+        <input type=""  placeholder="Что Вы хотите узнать?">
+        <button id="my-form-button" src="images/main/poisk.svg" ></button>
+        <p id="my-form-status"></p>
+      </form>
+    
+
 
     <!-- раздел+описание -->
     <div class="section">
