--- a/src/feno/feno_article1.html
+++ b/src/feno/feno_article1.html
@@ -13,5 +13,11 @@
 
     <p><a href="../feno.html">Назад</a></p>
     <h1>Статья о фенологии</h1>
+
+    <form>
+        <input type=""  placeholder="Что Вы хотите узнать?">
+        <button id="my-form-button" src="images/main/poisk.svg" ></button>
+        <p id="my-form-status"></p>
+      </form>
     </body>
 </html>
