--- a/src/habitat.html
+++ b/src/habitat.html
@@ -11,6 +11,12 @@
     <p><a href="./map.html">Карта</a></p>
     <p><a href="./literature.html">Литература</a></p>
     <h1>Поведенческие знаки</h1>
-    <p><a href="habitat/habitat_article1.html">Статья о поведении</a></p>
+    <p><a href="habitat/habitat_article1.html">Правда ли, что коровы ложатся, когда собирается дождь?</a></p>
+
+    <form>
+        <input type=""  placeholder="Что Вы хотите узнать?">
+        <button id="my-form-button" src="images/main/poisk.svg" ></button>
+        <p id="my-form-status"></p>
+      </form>
 </body>
 </html>
