--- a/src/literature/book.html
+++ b/src/literature/book.html
@@ -12,5 +12,11 @@
     <p><a href="../literature.html">Назад</a></p>
 
     <h1>Книга в литературе</h1>
+
+    <form>
+        <input type=""  placeholder="Что Вы хотите узнать?">
+        <button id="my-form-button" src="images/main/poisk.svg" ></button>
+        <p id="my-form-status"></p>
+      </form>
 </body>
 </html>
