--- a/src/map.html
+++ b/src/map.html
@@ -10,5 +10,11 @@
     <p><a href="./about.html">О нас</a></p>
     <p><a href="./literature.html">Литература</a></p>
     <h1>Карта</h1>
+
+    <form>
+        <input type=""  placeholder="Что Вы хотите узнать?">
+        <button id="my-form-button" src="images/main/poisk.svg" ></button>
+        <p id="my-form-status"></p>
+      </form>
 </body>
 </html>
