--- a/src/about.html
+++ b/src/about.html
@@ -61,8 +61,8 @@
             <p>Введите своё наблюдение в&nbsp;поисковик или исследуйте разделы, 
                 где описаны природные явления. Каждое взаимодействие с&nbsp;природой становится частью большого диалога.</p> <br>
                 <div class="primer">
-                    <a href="./habitat/habitat_article1.html"><h2>Например, вот одна из статей</h2></a>
-                    <div class="underline"> <img src="images/about/underline.png" alt=""></div>
+                    <a href="./habitat/habitat_article1.html"><h2>Например, вот одна <br>из <u>статей</u></h2></a>
+                    <!-- <div class="underline"> <img src="images/about/underline.png" alt=""></div> -->
                 </div>
         </div>
         <div class="item1">
@@ -89,9 +89,6 @@
         <h2>Манифест</h2>
     </div>
 
-    <div class="manifesto_bg">
-        <img src="images/about/img6.png" alt="">
-    </div>
     <div class="manifesto">
         <p class="manifesto1">
             Bios — «жизнь», logos — «слово» <br> <br>
