--- a/src/about.html
+++ b/src/about.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Про медиа о природных знаках Умвельт</title>
-    <meta name="description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. 
-    Мы сервис Умвельт, где собираются и интерпретируются природные сигналы.">
-    <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
+
+    <meta property="og:type" content="website" /> 
+    <meta property="og:url" content="https://hseadc.github.io/umwelt/about.html" /> 
+    <meta property="og:title" content="Умвельт. Медиа о природных знаках" /> 
+    <meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
+    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+     
+    <!-- Twitter --> 
+    <meta property="twitter:card" content="summary_large_image" /> 
+    <meta property="twitter:url" content="https://hseadc.github.io/umwelt/about.html" /> 
+    <meta property="twitter:title" content="Умвельт. Медиа о природных знаках" /> 
+    <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+
     <link rel="icon" href="images/about/favicon.svg" type="image/x-icon"> 
 </head>
 <body>
