--- a/src/color.html
+++ b/src/color.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website" /> 
+    <meta property="og:url" content="https://hseadc.github.io/umwelt/color.html" /> 
+    <meta property="og:title" content="Цветовые изменения в природе" /> 
+    <meta property="og:description" content="В этом разделе Умвельт рассказывает о том, что значат изменения в цветах в природе" /> 
+    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+     
+    <!-- Twitter --> 
+    <meta property="twitter:card" content="summary_large_image" /> 
+    <meta property="twitter:url" content="https://hseadc.github.io/umwelt/color.html" /> 
+    <meta property="twitter:title" content="Цветовые изменения в природе" /> 
+    <meta property="twitter:description" content="В этом разделе Умвельт рассказывает о том, что значат изменения в цветах в природе" /> 
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
     <title>color</title>
 </head>
 <body>
