--- a/src/color/color_article1.html
+++ b/src/color/color_article1.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:type" content="website" /> 
+<meta property="og:url" content="https://hseadc.github.io/umwelt/" /> 
+<meta property="og:title" content="Умвельт. Медиа о природных знаках " /> 
+<meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
+<meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+ 
+<!-- Twitter --> 
+<meta property="twitter:card" content="summary_large_image" /> 
+<meta property="twitter:url" content="https://hseadc.github.io/umwelt/" /> 
+<meta property="twitter:title" content="Умвельт. Медиа о природных знаках " /> 
+<meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
+<meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
     <title>color_article</title>
 </head>
 <body>
