--- a/src/habitat/habitat_article1.html
+++ b/src/habitat/habitat_article1.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Правда ли, что коровы ложатся, когда собирается дождь?</title>
-    <meta name="description" content="1. Коровы чувствительны к увеличению влажности и ложатся на траву, чтобы она оставалась сухой.">
+    <meta property="og:type" content="website" /> 
+    <meta property="og:url" content="https://hseadc.github.io/umwelt/habitat_article1.html" /> 
+    <meta property="og:title" content="Правда ли, что коровы ложатся, когда собирается дождь?" /> 
+    <meta property="og:description" content="Согласно недавнему опросу Метеорологического управления Великобритании, более 60% британцев считают, что лежание 
+    коров (2) — верный признак дождя.Однако, по правде говоря, нет никаких научных подтверждений этой части погодного фольклора." /> 
+    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+     
+    <!-- Twitter --> 
+    <meta property="twitter:card" content="summary_large_image" /> 
+    <meta property="twitter:url" content="https://hseadc.github.io/umwelt/habitat_article1.html" /> 
+    <meta property="twitter:title" content="Правда ли, что коровы ложатся, когда собирается дождь?" /> 
+    <meta property="twitter:description" content="Согласно недавнему опросу Метеорологического управления Великобритании, более 60% британцев считают, что лежание 
+    коров (2) — верный признак дождя.Однако, по правде говоря, нет никаких научных подтверждений этой части погодного фольклора." /> 
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
     <meta name="keywords" content="Природа, умвельт, природные знаки, медиа о природе, корова, дождь, осадки, поведение животных, ложатся ли коровы, правда ли что коровы ложатся когда собирается дождь">
     <link rel="icon" href="../images/about/favicon.svg" type="image/x-icon">
 </head>
