--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
 <meta property="og:url" content="https://hseadc.github.io/umwelt/" /> 
 <meta property="og:title" content="Умвельт. Медиа о природных знаках " /> 
 <meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" /> 
+<meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
  
 <!-- Twitter --> 
 <meta property="twitter:card" content="summary_large_image" /> 
 <meta property="twitter:url" content="https://hseadc.github.io/umwelt/" /> 
 <meta property="twitter:title" content="Умвельт. Медиа о природных знаках " /> 
 <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" /> 
+<meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
 
   <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
   <link rel="icon" href="images/about/favicon.svg" type="image/x-icon">
