--- a/src/map.html
+++ b/src/map.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:type" content="website" /> 
+    <meta property="og:url" content="https://hseadc.github.io/umwelt/map.html" /> 
+    <meta property="og:title" content="Карта от Умвельта" /> 
+    <meta property="og:description" content="В этом разделе есть карта, с помощью которой можно узнать о природных изменениях по всему свету" /> 
+    <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+     
+    <!-- Twitter --> 
+    <meta property="twitter:card" content="summary_large_image" /> 
+    <meta property="twitter:url" content="https://hseadc.github.io/umwelt/map.html" /> 
+    <meta property="twitter:title" content="Карта от Умвельта" /> 
+    <meta property="twitter:description" content="В этом разделе есть карта, с помощью которой можно узнать о природных изменениях по всему свету" /> 
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
     <title><map name=""></map></title>
 </head>
 <body>
