converted to webp

--- a/src/about.html
+++ b/src/about.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="img1">
-        <img src="images/about/img1.jpg">
+        <img src="images/about/img1.webp">
     </div>
 
     <hr>
@@ -65,7 +65,7 @@
        
     <div class="container">
         <div class="item1">
-            <div class="item_pic"><img src="images/about/img2.jpg" alt=""></div>
+            <div class="item_pic"><img src="images/about/img2.webp" alt=""></div>
             <h2>1</h2>
         </div>
         <div class="item2">
@@ -86,13 +86,13 @@
         </div>
         <div class="item1">
             <h2>2</h2>
-            <div class="item_pic2"><img src="images/about/img3.jpg" alt=""></div>
+            <div class="item_pic2"><img src="images/about/img3.webp" alt=""></div>
         </div>
     </div>
 
     <div class="container">
         <div class="item1">
-            <div class="item_pic2"><img src="images/about/img4.jpg" alt=""></div>
+            <div class="item_pic2"><img src="images/about/img4.webp" alt=""></div>
             <h2>3</h2>
         </div>
         <div class="item2">
@@ -147,7 +147,7 @@
 
     <div class="container1">
         <div class="item1">
-            <div class="history_pic"><img src="images/about/img5.JPG" alt=""></div>
+            <div class="history_pic"><img src="images/about/img5.webp" alt=""></div>
         </div>
         <div class="item22">
             <p>Человек и природный знак</p>
@@ -173,9 +173,9 @@
     
 
     <div class="social">
-        <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="images/about/tg.png" alt=""></a>
-        <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="images/about/vk.png" alt=""></a>
-        <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="images/about/dzen.png" alt=""></a>
+        <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="images/about/tg.webp" alt=""></a>
+        <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="images/about/vk.webp" alt=""></a>
+        <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="images/about/dzen.webp" alt=""></a>
     </div>
 </body>
 </html>
