--- a/src/habitat/habitat_article1.html
+++ b/src/habitat/habitat_article1.html
@@ -77,9 +77,9 @@
     <p class="tags">Поведение Животные Осадки</p>
     </div>
     <div class="socials">
-        <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="../images/about/tg.png" alt=""></a>
-        <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="../images/about/vk.png" alt=""></a>
-        <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="../images/about/dzen.png" alt=""></a>
+        <a href="https://t.me/uumwelt" class="tg"><img class="tg1" src="../images/about/tg.webp" alt=""></a>
+        <a href="https://vk.com/club227899273" class="tg"><img class="tg1" src="../images/about/vk.webp" alt=""></a>
+        <a href="https://clck.ru/3DfjFZ" class="tg"><img class="tg1" src="../images/about/dzen.webp" alt=""></a>
       </div>
       <p class="umwelt_podval">Умвельт</p>
     </body>
