--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 <meta property="og:title" content="Умвельт. Медиа о природных знаках " /> 
 <meta property="og:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
 <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+
  
 <!-- Twitter --> 
 <meta property="twitter:card" content="summary_large_image" /> 
@@ -22,7 +23,7 @@
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
 
   <meta name="keywords" content="медиа, природа, умвельт, природные знаки, медиа о природе">
-  <link rel="icon" href="images/about/favicon.svg" type="image/x-icon">
+  <link rel="icon" href="images/logotype.png" type="image/x-icon"> 
   </head>
 
   <body class="main">
@@ -35,7 +36,8 @@
 <p><a href="habitat.html">Поведение</a></p> 
 <p><a href="sound.html">Звук</a></p> 
 <p><a href="geo.html">Геология</a></p> 
-<p><a href="structure.html">Строение</a></p> 
+<p><a href="structure.html">Строение</a></p>
+<p><a href="styleguide.html">Стайл-гайд</a></p> 
 
 <form>
   <input type=""  placeholder="Что Вы хотите узнать?">
