--- a/src/literature.html
+++ b/src/literature.html
@@ -16,6 +16,7 @@
     <meta property="twitter:title" content="Литература от Умвельта" /> 
     <meta property="twitter:description" content="В этом разделе Умвельт рассказывает о книгах, которые пригодились для написания статей" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <link rel="icon" href="images/logotype.png" type="image/x-icon"> 
     <title>literature</title>
 </head>
 <body>
