--- a/src/about.html
+++ b/src/about.html
@@ -18,7 +18,7 @@
     <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
 
-    <link rel="icon" href="images/about/favicon.svg" type="image/x-icon"> 
+    <link rel="icon" href="images/logotype.png" type="image/x-icon"> 
 </head>
 <body>
     <p><a href="./index.html">Главная</a></p>
@@ -40,7 +40,7 @@
     </div>
 
     <div class="section2">
-        <div><img class="logotypee" src="images/about/logo.jpg"></div>
+        <div><img class="logotypee" src="images/logotype.webp"></div>
         <div class="section22">
             <p>Окружающий мир общается с&nbsp;человеком на&nbsp;языке, состоящим из&nbsp;знаков. Знаки требуют расшифровки.
                 <br><br>
