--- a/src/feno.html
+++ b/src/feno.html
@@ -9,6 +9,7 @@
     <meta property="og:title" content="Фенологические изменения в природе" /> 
     <meta property="og:description" content="В этом разделе Умвельт рассказывает о том, что значат изменения в фенологии в природе" /> 
     <meta property="og:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <link rel="icon" href="images/logotype.png" type="image/x-icon"> 
      
     <!-- Twitter --> 
     <meta property="twitter:card" content="summary_large_image" /> 
