--- a/src/sound.html
+++ b/src/sound.html
@@ -16,6 +16,7 @@
     <meta property="twitter:title" content="Звуковые изменения в природе" /> 
     <meta property="twitter:description" content="В этом разделе Умвельт рассказывает о том, что значат изменения в звуках в природе" /> 
     <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
+    <link rel="icon" href="images/logotype.png" type="image/x-icon"> 
     <title>sound</title>
 </head>
 <body>
