--- a/src/color/color_article1.html
+++ b/src/color/color_article1.html
@@ -16,7 +16,7 @@
 <meta property="twitter:title" content="Умвельт. Медиа о природных знаках " /> 
 <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
-    <title>color_article</title>
+    <title>Яркие цвета кораллов: сигнал о бедствии</title>
 </head>
 <body>
     <p><a href="../index.html">Главная</a></p>
@@ -25,7 +25,7 @@
     <p><a href="../literature.html">Литература</a></p>
 
     <p><a href="../color.html">Назад</a></p>
-    <h1>Статья о цвете</h1>
+    <h1>Яркие цвета кораллов: сигнал о бедствии</h1>
 
     <form>
         <input type=""  placeholder="Что Вы хотите узнать?">
