--- a/src/feno/feno_article2.html
+++ b/src/feno/feno_article2.html
@@ -16,7 +16,7 @@
 <meta property="twitter:title" content="Умвельт. Медиа о природных знаках " /> 
 <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
-    <title>Тектонические сдвиги: язык движения Земли</title>
+    <title>feno_article</title>
 </head>
 <body>
     <p><a href="../index.html">Главная</a></p>
@@ -24,8 +24,8 @@
     <p><a href="../map.html">Карта</a></p>
     <p><a href="../literature.html">Литература</a></p>
 
-    <p><a href="../geo.html">Назад</a></p>
-    <h1>СТектонические сдвиги: язык движения Земли</h1>
+    <p><a href="../feno.html">Назад</a></p>
+    <h1>Статья о фенологии</h1>
 
     <form>
         <input type=""  placeholder="Что Вы хотите узнать?">
