--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
     <meta charset="utf-8" />
     <!-- Primary Meta Tags --> 
-<title>Умвельт. Медиа о природных знаках </title> 
+<title>ЧАЩА </title> 
 <meta name="title" content="Умвельт. Медиа о природных знаках " /> 
 <meta name="description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
  
@@ -26,9 +27,14 @@
   <link rel="icon" href="images/logotype.png" type="image/x-icon"> 
   </head>
 
+  <header>
+    <div class="gradient"><img src="images/index/top_gradient.png" alt=""></div>
+  </header>
+
+  <p class="chascha">чаща</p>
   <body class="main">
-  <p><a href="index.html">Главная</a></p> 
-  <p><a href="about.html">О нас</a></p> 
+  <!-- <p><a href="index.html">Главная</a></p> 
+  <p><a href="about.html">О нас</a></p>  
 <p><a href="map.html">Карта</a></p>
 <p><a href="literature.html">Литература</a></p> 
 <p><a href="color.html">Цвет</a></p> 
@@ -37,19 +43,84 @@
 <p><a href="sound.html">Звук</a></p> 
 <p><a href="geo.html">Геология</a></p> 
 <p><a href="structure.html">Строение</a></p>
-<p><a href="styleguide.html">Стайл-гайд</a></p> 
+<p><a href="styleguide.html">Стайл-гайд</a></p>  -->
 
-<form>
-  <input type=""  placeholder="Что Вы хотите узнать?">
-  <button id="my-form-button" src="images/main/poisk.svg" ></button>
-  <p id="my-form-status"></p>
-</form>
+<div class="main_screen">
+  <div class="menu">
+    <ul>
+      <li><a href="index.html">Главная</a></li> 
+      <li><a href="about.html">О нас</a></li>  
+      <li><a href="map.html">Карта</a></li>
+      <li><a href="literature.html">Литература</a></li> 
+      <li>
+        <p>Разделы</p>
+        <ul>
+          <li><a href="color.html">Цвет</a></li> 
+          <li><a href="feno.html">Фенология</a></li> 
+          <li><a href="habitat.html">Поведение</a></li> 
+          <li><a href="sound.html">Звук</a></li> 
+          <li><a href="geo.html">Геология</a></li> 
+          <li><a href="structure.html">Строение</a></li>
+        </ul>
+      </li>
+      <li><a href="styleguide.html">Стайл-гайд</a></li> 
+    </ul>
+    <form>
+      <input type=""  placeholder="Что Вы хотите узнать?">
+      <button id="my-form-button" src="images/index/finder.png" ></button>
+      <p id="my-form-status"></p>
+    </form>
+  </div>
+  
+  
+  <div class="table">
+    <div class="div1"><p>Звук</p></div>
+    <div class="div2"><a href="sound/sound_article1.html"><img src="images/sound/sound_article1/img1.webp" alt=""></a></div>
+    <div class="div3"></div>
+    <div class="div4"></div>
+    <div class="div5"><a href="sound/sound_article2.html">Зов дельфинов: ультразвуковая коммуникация</a></div>
+    <div class="div6"></div>
+    <div class="div7"><p>Геология</p></div>
+    <div class="div8"><a href="geo/geo_article1.html">Тектонические сдвиги: язык движения Земли</a></div>
+    <div class="div9"><a href="geo/geo_article2.html">Вулканическая пыль: следы катастроф </a></div>
+    <div class="div10"></div>
+    <div class="div11"></div>
+    <div class="div12"></div>
+    <div class="div13"><p>Поведение</p></div>
+    <div class="div14"></div>
+    <div class="div15"></div>
+    <div class="div16"><a href="habitat/habitat_article1.html"><img src="images/habitat/habitat_article1/img1.webp" alt=""></a></div>
+    <div class="div17"></div>
+    <div class="div18"></div>
+    <div class="div19"><p>Строение</p></div>
+    <div class="div20"></div>
+    <div class="div21"></div>
+    <div class="div22"></div>
+    <div class="div23"></div>
+    <div class="div24"><a href="structure/structure_article1.html">Паутинные сети: архитектура выживания</a></div>
+    <div class="div25"><p>Фенология</p></div>
+    <div class="div26"></div>
+    <div class="div27"><a href="feno/feno_article1.html"><img src="images/feno/6422219.webp" alt=""></a></div>
+    <div class="div28"><a href="feno/feno_article2.html">Первые морозы: как зима сигнализирует о своём приходе</a></div>
+    <div class="div29"></div>
+    <div class="div30"></div>
+    <div class="div31"><p>Цвет</p></div>
+    <div class="div32"><a href="color/color_article1.html">Яркие цвета кораллов: сигнал о бедствии</a></div>
+    <div class="div33"></div>
+    <div class="div34"></div>
+    <div class="div35"></div>
+    <div class="div36"></div>
+  </div>
+</div>
 
-<!-- <form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
+
+
+
+<form id="my-form" action="https://formspree.io/f/mzzpnoee" method="POST">
   <p id="form_text">Вы можете оставить почту,<br>
     чтобы первыми узнать о запуске сайта</p>
 
-  <input type="email" name="email" placeholder="Почта"/>
+  <input class="email" type="email" name="email" placeholder="Почта"/>
   <button id="my-form-button">Отправить</button>
   <p id="my-form-status"></p>
 </form>
@@ -85,7 +156,7 @@
     });
   }
   form.addEventListener("submit", handleSubmit)
-</script>  -->
+</script> 
 
 <!-- <h1>Разделы статей</h1>
 <p><a href="color.html">Знаки изменения цвета</a></p>
