--- a/src/sound/sound_article1.html
+++ b/src/sound/sound_article1.html
@@ -16,7 +16,7 @@
 <meta property="twitter:title" content="Умвельт. Медиа о природных знаках " /> 
 <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
-    <title>sound_article</title>
+    <title>пение птиц как экологический индикатор</title>
 </head>
 <body>
     <p><a href="../index.html">Главная</a></p>
@@ -25,7 +25,8 @@
     <p><a href="../literature.html">Литература</a></p>
 
     <p><a href="../sound.html">Назад</a></p>
-    <h1>Статья о звуке</h1>
+    <h1>Пение птиц как экологический индикатор</h1>
+    <p>Упс! Статья ещё не готова</p>
 
     <form>
         <input type=""  placeholder="Что Вы хотите узнать?">
