--- a/src/sound/sound_article2.html
+++ b/src/sound/sound_article2.html
@@ -16,7 +16,7 @@
 <meta property="twitter:title" content="Умвельт. Медиа о природных знаках " /> 
 <meta property="twitter:description" content="Окружающий мир общается с человеком на языке, состоящим из знаков. Они требуют расшифровки. Сервис Умвельт собирает и интерпретирует эти природные сигналы." /> 
 <meta property="twitter:image" content="https://raw.githubusercontent.com/HSEADC/umwelt/refs/heads/main/src/images/logotype.jpg" /> 
-    <title>Тектонические сдвиги: язык движения Земли</title>
+    <title>Зов дельфинов: ультразвуковая коммуникация</title>
 </head>
 <body>
     <p><a href="../index.html">Главная</a></p>
@@ -24,8 +24,9 @@
     <p><a href="../map.html">Карта</a></p>
     <p><a href="../literature.html">Литература</a></p>
 
-    <p><a href="../geo.html">Назад</a></p>
-    <h1>СТектонические сдвиги: язык движения Земли</h1>
+    <p><a href="../sound.html">Назад</a></p>
+    <h1>Зов дельфинов: ультразвуковая коммуникация</h1>
+    <p>Упс! Статья ещё не готова</p>
 
     <form>
         <input type=""  placeholder="Что Вы хотите узнать?">
